# soda

./: README.org
mcmqhost/: README.md  conanfile.txt  workload-8.yaml  workload-simple.yaml
mcmqhost/libunvme/: CMakeLists.txt
mcmqhost/local/: CMakeLists.txt  capi.cpp  generate-grep.cpp  generate-knn.cpp  main.cpp  pgtest-mcmq.cpp  pgtest-storpu.cpp  synthetic-mcmq.cpp  synthetic-storpu.cpp
mcmqhost/local/pgtest/: CMakeLists.txt  aggregate.h  buffer.c  bufpage.h  catalog.h  catalog_agg.c  config.h  data_types.h  datum.c  fmgr.c  fmgrprotos.h  heap.c  int.c  main.c  numeric.c  postgres.h  relation_posix.c  relation_storpu.c  schemas.h  skey.h  text.c  tpch_schemas.inc  tupdesc.h  tuples.c  types.h
mcmqhost/local/pgtest/scripts/: generate_schema.py
mcmqhost/local/pgtest/storpupg/: storpu_interface.h
mcmqhost/storpu-utils/: data_loader.cpp
myssd_sdk/: .clang-format  .gitignore  CMakeLists.txt  README.org  conanfile.txt
myssd_sdk/cmake/: FindUBDSRV.cmake
myssd_sdk/eccengine/: bch.c  bch.h  bch_engine.h  bch_hard.c  bch_soft.c  clock.c  ipi.c  lscript.ld  main.c  proto.h
myssd_sdk/include/: avl.h  barrier.h  bitmap.h  config.h  const.h  cpu_type.h  cpulocals.h  cpumask.h  dma.h  ecc.h  ecc_config.h  esr.h  fil.h  fixmap.h  flash.h  flash_config.h  histogram.h  idr.h  intr.h  iov_iter.h  kref.h  libcoro.h  llist.h  memalloc.h  mmu.h  page.h  pagetable.h  profile.h  ringq.h  sconst.h  slab.h  smp.h  spinlock.h  stackframe.h  storpu.h  timer.h  types.h  ucontext.h  utils.h
myssd_sdk/include/storpu/: completion.h  condvar.h  cpu_stop.h  file.h  futex.h  mutex.h  rwlock.h  symbols.h  thread.h  vm.h
myssd_sdk/r5poll/: asm_vector.S  boot.S  intr.c  ipi.c  lscript.ld  main.c  proto.h  timer.c  watchdog.c
myssd_sdk/r5poll/fil/: fil.c  fil.h  nfc.c  nfc.h  tsu.c
myssd_sdk/scripts/: create_projects.tcl  populate_workspace.sh  prof_analyzer.py
myssd_sdk/src/: alloc.c  bitmap.c  cpu.c  cpulocals.c  dbgcon.c  exc.c  head.S  idr.c  intr.c  iov_iter.c  ipi.c  kernel.S  lscript.ld  main.c  page.c  profile.c  proto.h  slab.c  smp.c  thread.h  timer.c  tls.c  tls.h  uart.c  worker.c  zdma.c
myssd_sdk/src/coro/: __ucontext.S  attr.c  condvar.c  coro_internal.h  mutex.c  queue.c  rwlock.c  scheduler.c  thread.c  ucontext.c
myssd_sdk/src/ftl/: amu.c  block_manager.c  data_cache.c  ftl.c
myssd_sdk/src/hdrhistogram/: hdr_histogram.c  hdr_malloc.c  hdr_malloc.h
myssd_sdk/src/hostif/: nvme.c  nvme.h  nvme_identify.c  nvme_pcie.c  nvme_pcie.h
myssd_sdk/src/storpu/: cpu_stop.c  fault.c  file.c  main.c  sched.c  thread.c
myssd_sdk/src/storpu/ldso/: elf.c  entry.S  ldso.c  ldso.h  reloc.c  symbol.c  tls.c
myssd_sdk/src/storpu/sync/: completion.c  condvar.c  futex.c  mutex.c  rwlock.c
myssd_sdk/src/storpu/vm/: cache.c  cache.h  context.c  exec.c  mem_anon.c  mem_anon_contig.c  mem_file.c  page.c  region.c  region.h  region_avl.c
myssd_sdk/um/: CMakeLists.txt  alloc.c  ff.c  linker.ld  main.c  nvme.c  slab.c  timer.c  zdma.c
myssd_sdk/um/include/: ff.h  xil_assert.h  xil_cache.h  xil_exception.h  xil_printf.h  xil_types.h
postgres/: configure  configure.ac
postgres/src/: Makefile.global.in
postgres/src/backend/: Makefile
postgres/src/backend/access/common/: relation.c
postgres/src/backend/access/heap/: heapam.c
postgres/src/backend/executor/: execTuples.c  nodeSeqscan.c
postgres/src/backend/main/: main.c
postgres/src/backend/optimizer/path/: costsize.c
postgres/src/backend/postmaster/: postmaster.c
postgres/src/backend/utils/misc/: guc.c
postgres/src/include/: pg_config.h.in
postgres/src/include/access/: heapam.h
postgres/src/include/nodes/: execnodes.h
postgres/src/include/utils/: rel.h  relcache.h
postgres/src/makefiles/: pgxs.mk
storpu/: .gitignore  CMakeLists.txt  Makefile  Pipfile  README.org  cross.cmake
storpu/include/: storpu.h
storpu/include/storpu/: file.h  sched.h  thread.h
storpu/local/: CMakeLists.txt  fmgrtab.c  misc.c  palloc.c  pgtest.c  synthetic.c  test.c
storpu/local/pgtest/: aggregate.c  btree.c  btree.h  buffer.h  data_types.c  fmgr.h  heap.h  index.c  index.h  relation.h  relation_mcmq.cpp  schemas.c  tpcc_schemas.inc  tuptable.h  varlena.c
storpu/local/pgtest/scripts/: collect_tables.py
storpu/local/postgres/: CMakeLists.txt
storpu/local/postgres/src/: CMakeLists.txt
storpu/local/postgres/src/backend/utils/adt/: int.c  numeric.c
storpu/scripts/: gen_symbols.py
storpu/src/: errno.c  fs.c  malloc.c  mmap.c  sbrk.c
storpu/src/string/: memchr.S  memcmp.S  memcpy.S  memset.S  strchr.S  strcmp.S  strlen.S  strncmp.S  strnlen.S  strrchr.S
