set(LIBSTORPU_SRCLIST
    backend/utils/adt/inet_cidr_ntop.c
    backend/utils/adt/inet_net_pton.c
    backend/utils/adt/acl.c
    backend/utils/adt/amutils.c
    backend/utils/adt/array_expanded.c
    backend/utils/adt/array_selfuncs.c
    backend/utils/adt/array_typanalyze.c
    backend/utils/adt/array_userfuncs.c
    backend/utils/adt/arrayfuncs.c
    backend/utils/adt/arraysubs.c
    backend/utils/adt/arrayutils.c
    backend/utils/adt/ascii.c
    backend/utils/adt/bool.c
    backend/utils/adt/cash.c
    backend/utils/adt/char.c
    backend/utils/adt/cryptohashfuncs.c
    backend/utils/adt/date.c
    backend/utils/adt/datetime.c
    backend/utils/adt/datum.c
    backend/utils/adt/dbsize.c
    backend/utils/adt/domains.c
    backend/utils/adt/encode.c
    backend/utils/adt/enum.c
    backend/utils/adt/expandeddatum.c
    backend/utils/adt/expandedrecord.c
    backend/utils/adt/float.c
    backend/utils/adt/format_type.c
    backend/utils/adt/formatting.c
    backend/utils/adt/genfile.c
    backend/utils/adt/geo_ops.c
    backend/utils/adt/geo_selfuncs.c
    backend/utils/adt/geo_spgist.c
    backend/utils/adt/int.c
    backend/utils/adt/int8.c
    backend/utils/adt/json.c
    backend/utils/adt/jsonb.c
    backend/utils/adt/jsonb_gin.c
    backend/utils/adt/jsonb_op.c
    backend/utils/adt/jsonb_util.c
    backend/utils/adt/jsonbsubs.c
    backend/utils/adt/jsonfuncs.c
    backend/utils/adt/jsonpath.c
    backend/utils/adt/jsonpath_exec.c
    backend/utils/adt/like.c
    backend/utils/adt/like_support.c
    backend/utils/adt/lockfuncs.c
    backend/utils/adt/mac.c
    backend/utils/adt/mac8.c
    backend/utils/adt/mcxtfuncs.c
    backend/utils/adt/misc.c
    backend/utils/adt/multirangetypes.c
    backend/utils/adt/multirangetypes_selfuncs.c
    backend/utils/adt/name.c
    backend/utils/adt/network.c
    backend/utils/adt/network_gist.c
    backend/utils/adt/network_selfuncs.c
    backend/utils/adt/network_spgist.c
    backend/utils/adt/numeric.c
    backend/utils/adt/numutils.c
    backend/utils/adt/oid.c
    backend/utils/adt/oracle_compat.c
    backend/utils/adt/orderedsetaggs.c
    backend/utils/adt/partitionfuncs.c
    backend/utils/adt/pg_locale.c
    backend/utils/adt/pg_lsn.c
    backend/utils/adt/pg_upgrade_support.c
    backend/utils/adt/pgstatfuncs.c
    backend/utils/adt/pseudotypes.c
    backend/utils/adt/quote.c
    backend/utils/adt/rangetypes.c
    backend/utils/adt/rangetypes_gist.c
    backend/utils/adt/rangetypes_selfuncs.c
    backend/utils/adt/rangetypes_spgist.c
    backend/utils/adt/rangetypes_typanalyze.c
    backend/utils/adt/regexp.c
    backend/utils/adt/regproc.c
    backend/utils/adt/ri_triggers.c
    backend/utils/adt/rowtypes.c
    backend/utils/adt/ruleutils.c
    backend/utils/adt/selfuncs.c
    backend/utils/adt/tid.c
    backend/utils/adt/timestamp.c
    backend/utils/adt/trigfuncs.c
    backend/utils/adt/tsginidx.c
    backend/utils/adt/tsgistidx.c
    backend/utils/adt/tsquery.c
    backend/utils/adt/tsquery_cleanup.c
    backend/utils/adt/tsquery_gist.c
    backend/utils/adt/tsquery_op.c
    backend/utils/adt/tsquery_rewrite.c
    backend/utils/adt/tsquery_util.c
    backend/utils/adt/tsrank.c
    backend/utils/adt/tsvector.c
    backend/utils/adt/tsvector_op.c
    backend/utils/adt/tsvector_parser.c
    backend/utils/adt/uuid.c
    backend/utils/adt/varbit.c
    backend/utils/adt/varchar.c
    backend/utils/adt/varlena.c
    backend/utils/adt/version.c
    backend/utils/adt/windowfuncs.c
    backend/utils/adt/xid.c
    backend/utils/adt/xid8funcs.c
    backend/utils/adt/xml.c
)

add_library(storpupg STATIC ${LIBSTORPU_SRCLIST})
set_property(TARGET storpupg PROPERTY POSITION_INDEPENDENT_CODE ON)
target_link_libraries(storpupg -nostdlib)
